lustre/mdt/mdt_hsm_cdt_client.c
@@ -426,11 +426,11 @@ int mdt_hsm_add_actions(struct mdt_thread_info *mti,
 	ENTRY;
 
 	/* no coordinator started, so we cannot serve requests */
-	if (cdt->cdt_state == CDT_STOPPED || cdt->cdt_state == CDT_INIT)
+	if (cdt->cdt_state == CDT_STOPPING || !cdt_getref_try(cdt))
 		RETURN(-EAGAIN);
 
 	if (!hal_is_sane(hal))
-		RETURN(-EINVAL);
+		GOTO(out, rc = -EINVAL);
 
 	/* search for compatible request, if found hai_cookie is set
 	 * to the request cookie
@@ -448,6 +448,7 @@ out:
 	if (rc == 0 || rc == -ENODATA)
 		mdt_hsm_cdt_event(cdt);
 
+	cdt_putref(cdt);
 	return rc;
 }
 
@@ -467,9 +468,15 @@ bool mdt_hsm_restore_is_running(struct mdt_thread_info *mti,
 	bool is_running;
 	ENTRY;
 
+	/* the coordinator is not started */
+	if (!cdt_getref_try(cdt))
+		return false;
+
 	mutex_lock(&cdt->cdt_restore_lock);
 	is_running = (cdt_restore_handle_find(cdt, fid) != NULL);
 	mutex_unlock(&cdt->cdt_restore_lock);
+
+	cdt_putref(cdt);
 
 	RETURN(is_running);
 }
